# Calque01

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: deploy.yml
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
scripts/: calque-orchestrator.service  calque-worker.service  comfy-check.sh  deploy.sh  setup-comfyui.sh  setup-vps.sh
static-site/: index.html
worker/: README.md  requirements.txt  spike_generate.py  spike_real.py  spike_watercolor.py
worker/calque/: __init__.py  build.py  generator.py  server.py
worker/calque/backend/: __init__.py  memory.py  models.py
worker/calque/postprocess/: __init__.py  core.py  style_fx.py  true_watercolor.py  watercolor_enhanced.py
worker/calque/styles/: __init__.py  watercolor.py
worker/calque/workflows/: structure_control.json  structure_style.json
